@@ -64,9 +64,9 @@ typedef short int var_t;
 typedef signed char reg_t;
 
 // Todo: Move this port-dependency somewehere else?
-#define NUM_REGS (TARGET_IS_Z80 ? (4 + (OPTRALLOC_A ? 1 : 0) + (OPTRALLOC_HL ? 2 : 0)) : (TARGET_IS_GBZ80 ? 3 : 0))
+#define NUM_REGS (TARGET_IS_Z80 ? (4 + (OPTRALLOC_A ? 1 : 0) + (OPTRALLOC_HL ? 2 : 0) + (OPTRALLOC_IY ? 2 : 0)) : (TARGET_IS_GBZ80 ? 3 : 0))
 // Upper bound on NUM_REGS
-#define MAX_NUM_REGS 7
+#define MAX_NUM_REGS 9
 
 // Assignment at an instruction
 struct i_assignment
